--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,14 @@
         android:label="@string/app_name"
         android:theme="@style/ApplicationTheme.FullScreen">
 
-        <activity android:name="gui.home.HomeActivity">
+        <activity android:name="gui.launch.LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
+        <activity android:name="gui.home.HomeActivity"/>
         <activity android:name="gui.sms_backup.SMSBackupActivity"/>
 
     </application>
